--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Saad Pasta Portfolio",
-  "name": "Saad Pasta Portfolio",
+  "short_name": "Ahmed waqas Portfolio",
+  "name": "Ahmed waqas Portfolio",
   "icons": [
     {
       "src": "/favicon.ico",
